--- a/package.json
+++ b/package.json
@@ -11,26 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.11",
-    "@angular/common": "~10.0.11",
-    "@angular/compiler": "~10.0.11",
-    "@angular/core": "~10.0.11",
-    "@angular/forms": "~10.0.11",
-    "@angular/platform-browser": "~10.0.11",
-    "@angular/platform-browser-dynamic": "~10.0.11",
-    "@angular/router": "~10.0.11",
+    "@angular/animations": "^10.1.1",
+    "@angular/cdk": "^10.2.0",
+    "@angular/common": "^10.1.1",
+    "@angular/compiler": "~10.1.1",
+    "@angular/core": "^10.1.1",
+    "@angular/forms": "^10.1.1",
+    "@angular/platform-browser": "~10.1.1",
+    "@angular/platform-browser-dynamic": "~10.1.1",
+    "@angular/router": "~10.1.1",
+    "angular-bootstrap-md": "^9.4.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.2",
+    "bootstrap-material-design": "^4.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ng-bootstrap-form-validation": "^5.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.7",
-    "@angular/cli": "~10.0.7",
-    "@angular/compiler-cli": "~10.0.11",
+    "@angular-devkit/build-angular": "~0.1001.1",
+    "@angular/cli": "~10.1.1",
+    "@angular/compiler-cli": "~10.1.1",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
