--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~11.0.5",
     "@angular/core": "^11.0.5",
     "@angular/forms": "^11.0.5",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@auth0/angular-jwt": "^5.0.2",
     "angular-bootstrap-md": "^10.1.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.2",
@@ -37,9 +39,9 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
